.gitignore: ignore binary output files, checksum files, etc
Change-Id: I27f27870eed44ab8f1cc488b99072364498eda5e
Signed-off-by: Matt DeVillier <matt.devillier@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,13 @@ documentation/skconfig.tex
 documentation/socketfkconfig.tex
 
 doxygen/*
+
+*.rom
+*.rom.md5
+*.elf.*
+*.old
+*.orig
+out/*
+*.img
+*.fd
+
