google/panther: misc non-functional cleanup
thermal.asl: use fan defs from thermal.h
devicetree.cb: remove reference to non-existent IGD
fadt.c: update header revision
gpio.h: clarify comment
mainboard.c: remove non-existent IGD crap

Change-Id: I44b0f1b68328af36b4d18e5d42fe4d70ca82f802
Signed-off-by: Matt DeVillier <matt.devillier@gmail.com>

--- a/src/mainboard/google/panther/Makefile.inc
+++ b/src/mainboard/google/panther/Makefile.inc
@@ -13,8 +13,8 @@
 ## GNU General Public License for more details.
 ##
 
-romstage-y += chromeos.c
-ramstage-y += chromeos.c
+romstage-$(CONFIG_CHROMEOS) += chromeos.c
+ramstage-$(CONFIG_CHROMEOS) += chromeos.c
 ramstage-y += lan.c
 
 smm-$(CONFIG_HAVE_SMI_HANDLER) += smihandler.c
