--- a/src/soc/intel/broadwell/Kconfig
+++ b/src/soc/intel/broadwell/Kconfig
@@ -67,6 +67,10 @@ config SERIAL_CPU_INIT
 	bool
 	default n
 
+config ENABLE_VMX
+	bool "Enable VMX for virtualization"
+	default n
+
 config SMM_TSEG_SIZE
 	hex
 	default 0x800000
