soc/intel/broadwell: add vmx support via Kconfig option
patch identical to VMX support in cpu/intel/haswell
tested/verified working on google/tidus

Change-Id: Ifa5cddafb998db4607b9ae5cff3676c3fb294d3a
Signed-off-by: Matt DeVillier <matt.devillier@gmail.com>

--- a/src/soc/intel/broadwell/Kconfig
+++ b/src/soc/intel/broadwell/Kconfig
@@ -68,6 +68,10 @@ config SERIAL_CPU_INIT
 	bool
 	default n
 
+config ENABLE_VMX
+	bool "Enable VMX for virtualization"
+	default n
+
 config SMM_TSEG_SIZE
 	hex
 	default 0x800000
