--- a/src/mainboard/google/lulu/Kconfig
+++ b/src/mainboard/google/lulu/Kconfig
@@ -14,6 +14,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select MAINBOARD_HAS_CHROMEOS
 	select MAINBOARD_HAS_LPC_TPM
 	select INTEL_INT15
+	select INTEL_GMA_ACPI
 
 config CHROMEOS
 	select VBOOT_VBNV_CMOS
