google/auron: cleanup from peppy port
the upstream google/auron board was ported from upstream google/peppy,
rather than ported from the Chromium google/auron board.  Correct
errors resulting from that:

- remove unused spd hex file (not valid for auron)
- remove unused platform.asl (file unused; functionality previous migrated
to common broadwell ACPI code)
- add missing SPD hex file
- update spd makefile with correct SPD hex files/ordering
- remove references to devices which don't existin on auron, such as
touchscreen, light sensor, etc.
- reference headers relatively where appropriate

Change-Id: I3cb1593f82f5304e8095f424e594fd1996b09072
Signed-off-by: Matt DeVillier <matt.devillier@gmail.com>

--- a/src/mainboard/google/auron/spd/Makefile.inc
+++ b/src/mainboard/google/auron/spd/Makefile.inc
@@ -18,14 +18,22 @@ romstage-y += spd.c
 SPD_BIN = $(obj)/spd.bin
 
 # { GPIO47, GPIO9, GPIO13 }
-SPD_SOURCES  = Micron_4KTF25664HZ       # 0b0000
-SPD_SOURCES += Hynix_HMT425S6AFR6A      # 0b0001
-SPD_SOURCES += Elpida_EDJ4216EFBG       # 0b0010
-SPD_SOURCES += Micron_4KTF25664HZ       # 0b0011
-SPD_SOURCES += Micron_4KTF25664HZ       # 0b0100
-SPD_SOURCES += Hynix_HMT425S6AFR6A      # 0b0101
-SPD_SOURCES += Elpida_EDJ4216EFBG       # 0b0110
-SPD_SOURCES += empty                    # 0b0111
+SPD_SOURCES  = Micron_4KTF25664HZ       		# 0b0000
+SPD_SOURCES += Hynix_HMT425S6AFR6A      		# 0b0001
+SPD_SOURCES += Hynix_HMT425S6CFR6A_H5TC4G63CFR       	# 0b0010
+SPD_SOURCES += Micron_4KTF25664HZ       		# 0b0011
+SPD_SOURCES += Micron_4KTF25664HZ       		# 0b0100
+SPD_SOURCES += Hynix_HMT425S6AFR6A      		# 0b0101
+SPD_SOURCES += Hynix_HMT425S6CFR6A_H5TC4G63CFR       	# 0b0110
+SPD_SOURCES += empty					# 0b0111
+SPD_SOURCES += empty					# 0b1000
+SPD_SOURCES += empty					# 0b1001
+SPD_SOURCES += empty					# 0b1010
+SPD_SOURCES += empty					# 0b1011
+SPD_SOURCES += empty					# 0b1100
+SPD_SOURCES += empty					# 0b1101
+SPD_SOURCES += empty					# 0b1110
+SPD_SOURCES += empty					# 0b1111
 
 SPD_DEPS := $(foreach f, $(SPD_SOURCES), src/mainboard/$(MAINBOARDDIR)/spd/$(f).spd.hex)
 
@@ -33,7 +41,7 @@ SPD_DEPS := $(foreach f, $(SPD_SOURCES), src/mainboard/$(MAINBOARDDIR)/spd/$(f).
 $(SPD_BIN): $(SPD_DEPS)
 	for f in $+; \
 	  do for c in $$(cat $$f | grep -v ^#); \
-	    do echo -e -n "\\x$$c"; \
+	    do printf $$(printf '\%o' 0x$$c); \
 	  done; \
 	done > $@
 
