--- a/src/mainboard/google/auron/Kconfig
+++ b/src/mainboard/google/auron/Kconfig
@@ -5,6 +5,7 @@ if BOARD_GOOGLE_AURON
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
+	select SYSTEM_TYPE_LAPTOP
 	select SOC_INTEL_BROADWELL
 	select BOARD_ROMSIZE_KB_8192
 	select EC_GOOGLE_CHROMEEC
