--- a/src/mainboard/google/samus/Kconfig
+++ b/src/mainboard/google/samus/Kconfig
@@ -2,6 +2,7 @@ if BOARD_GOOGLE_SAMUS
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
+	select SYSTEM_TYPE_LAPTOP
 	select SOC_INTEL_BROADWELL
 	select BOARD_ROMSIZE_KB_8192
 	select EC_GOOGLE_CHROMEEC
