google/enguarde: post-upstream cleanup (non-functional)
Change-Id: I5f3781bdf4114fa414cb1ca099d82225ba5e0cea
Signed-off-by: Matt DeVillier <matt.devillier@gmail.com>

--- a/src/mainboard/google/enguarde/spd/Makefile.inc
+++ b/src/mainboard/google/enguarde/spd/Makefile.inc
@@ -36,7 +36,7 @@ SPD_SOURCES += samsung_2GiB_dimm_K4B4G1646Q-HYK0
 
 SPD_DEPS := $(foreach f, $(SPD_SOURCES), src/mainboard/$(MAINBOARDDIR)/spd/$(f).spd.hex)
 
-# Include spd rom data
+# Include spd ROM data
 $(SPD_BIN): $(SPD_DEPS)
 	for f in $+; \
 	  do for c in $$(cat $$f | grep -v ^#); \
