nb/sandybridge: add option to include VBT in CBFS
Signed-off-by: Matt DeVillier <matt.devillier@gmail.com>

--- a/src/northbridge/intel/sandybridge/Makefile.inc
+++ b/src/northbridge/intel/sandybridge/Makefile.inc
@@ -56,4 +56,8 @@ mrc.cache-align := 0x10000
 mrc.cache-type := mrc_cache
 endif
 
+cbfs-files-$(CONFIG_ADD_VBT_DATA_FILE) += vbt.bin
+vbt.bin-file := $(call strip_quotes,$(CONFIG_VBT_FILE))
+vbt.bin-type := raw
+
 endif
