--- a/src/mainboard/google/slippy/Kconfig
+++ b/src/mainboard/google/slippy/Kconfig
@@ -20,6 +20,14 @@ config BOARD_GOOGLE_BASEBOARD_SLIPPY
 
 if BOARD_GOOGLE_BASEBOARD_SLIPPY
 
+config ELAN_TRACKPAD_ACPI
+	bool "Use Elan Trackpad"
+	depends on BOARD_GOOGLE_PEPPY
+	default n
+	help
+		Some Acer C720's ship with an Elan trackpad instead of Cypress.
+		Enumerate this in ACPI so trackpad is functional.
+
 config CHROMEOS
 	select EC_GOOGLE_CHROMEEC_SWITCHES
 	select EC_SOFTWARE_SYNC
